# mysite_render

./: build.sh  pyproject.toml  render.yaml
mysite/: settings.py  urls.py
render/: views.py
render/templates/render/: index.html
